--- a/src/app/manager-product/manager-product.component.html
+++ b/src/app/manager-product/manager-product.component.html
@@ -13,63 +13,168 @@
 			</div>
 		</div>
 	</div>
-
- <form  style="width:36%;height:500px; padding-left:20px; padding-top:10px; float:left">
+<div class="row">
+ <form  style="background-color: rgb(255, 255, 240);width:36%;height:500px; padding-left:20px; padding-right:10px; padding-top:10px; float:left">
   <div class="form-group">
     <label>ID</label>
-    <input type="number" class="form-control" id="id" name="id" placeholder="Enter Id...">
+    <input type="text" class="form-control" id="id" name="id" placeholder="Enter Id..." [(ngModel)]="product.id">
   </div>
   <div class="form-group">
     <label>Product Name</label>
-    <input type="text" class="form-control" id="id" name="name" placeholder="Enter Name...">
+    <input type="text" class="form-control"  name="name" placeholder="Enter Name..." [(ngModel)]="product.name">
   </div>
   <div class="form-group">
     <label>Price</label>
-    <input type="number" class="form-control" id="id" name="price" placeholder="Enter Price...">
+    <input type="t" class="form-control"  name="price" placeholder="Enter Price..." [(ngModel)]="product.price">
   </div>
   
   <div class="form-group">
     <label>Description</label>
-    <textarea class="form-control" id="" name="desc" rows="3"></textarea>
+    <textarea class="form-control"  name="desc" rows="3"  [(ngModel)]="product.desc"></textarea>
   </div>
   <div class="form-group">
     <label>Image URL</label> |<a href="https://bom.to/A4IgN6">Lấy ảnh</a>|<a href="https://bom.to/">Rút gọn Link</a>|<a href="https://bom.to/ru0WBq">Data</a>
-    <input type="text" class="form-control" id="id" name="img1" placeholder="Enter Image...">
+    <input type="text" class="form-control"  name="img1" placeholder="Enter Image..." [(ngModel)]="product.img1">
   </div>
   <div class="btn-group">
-  <button class="btn btn-info">Add product</button>
-  <button  class="btn btn-info">Update product</button>
+  <button class="btn btn-secondary" (click)="addProduct()"><i class="fas fa-plus-circle 5x"></i></button>
+  <button  class="btn btn-info" (click)="editProduct()">Update product</button>
 </div>
 </form> 
-<div style="width:63%; float:right; padding-top:36px; padding-right:10px;">
-  <table class="table table-striped table-hover table-sm" cellspacing="0"
+<div style="width:63%; float:left; padding-top:10px; padding-right:10px;">
+  <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name" style="margin-bottom: 10px">
+  <table   id="myTable" class="table table-striped table-hover table-sm" cellspacing="0"
   width="100%">
-  <thead>
+  <thead style="background-color: rgb(251, 219, 101)">
     <tr>
+      <th style="text-align: center;">Action </th>
       <th >Stt </th>
-      <th >Name </th>
+      <th>Name </th>
       <th >Price </th>
-      <th >Description  </th>  
       <th >Image </th>
-      <th>Action </th>
+      
     </tr>
   </thead>
-  <tbody>
+  <tbody *ngFor="let product of products,index as i" >
     <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td>
-     <div class="btn-group" >
-  <button class="btn btn-info">Edit</button>
-  <button  class="btn btn-info">Remove</button>
-</div> 
+       <td style="text-align: center ;">
+     <button class="btn btn-primary" style="margin-right:8px"> <i class="fas fa-user-edit"routerLink="/product/edit/{{product.id}}" ></i></button>
+     <button class="btn btn-primary" (onclick)="removeProduct(product.id)"> <i class="fas fa-trash-alt" ></i></button>
     </td>
+    <td>{{i}}</td>
+    <td>{{product.name}}</td>
+    <td>${{product.price}}</td>
+    <td>{{product.img1}}</td>
+   
 
     </tr>
       </tbody>
 
 </table>
 </div>
+</div>
+<footer>
+  <div class="w3l-middlefooter-sec">
+			<div class="container py-md-5 py-sm-4 py-3">
+				<div class="row footer-info w3-agileits-info">
+					<div class="col-md-3 col-sm-6 footer-grids">
+						<h3 class="text-white font-weight-bold mb-3">Categories</h3>
+						<ul>
+							<li class="mb-3">
+								<a href="product.html">Mobiles </a>
+							</li>
+							<li class="mb-3">
+								<a href="product.html">Computers</a>
+							</li>
+							<li class="mb-3">
+								<a href="product.html">TV, Audio</a>
+							</li>
+							<li class="mb-3">
+								<a href="product2.html">Smartphones</a>
+							</li>
+							<li class="mb-3">
+								<a href="product.html">Washing Machines</a>
+							</li>
+							<li>
+								<a href="product2.html">Refrigerators</a>
+							</li>
+						</ul>
+					</div>
+					<div class="col-md-3 col-sm-6 footer-grids mt-sm-0 mt-4">
+						<h3 class="text-white font-weight-bold mb-3">Quick Links</h3>
+						<ul>
+							<li class="mb-3">
+								<a href="about.html">About Us</a>
+							</li>
+							<li class="mb-3">
+								<a href="contact.html">Contact Us</a>
+							</li>
+							<li class="mb-3">
+								<a href="help.html">Help</a>
+							</li>
+							<li class="mb-3">
+								<a href="faqs.html">Faqs</a>
+							</li>
+							<li class="mb-3">
+								<a href="terms.html">Terms of use</a>
+							</li>
+							<li>
+								<a href="privacy.html">Privacy Policy</a>
+							</li>
+						</ul>
+					</div>
+					<div class="col-md-3 col-sm-6 footer-grids mt-md-0 mt-4">
+						<h3 class="text-white font-weight-bold mb-3">Get in Touch</h3>
+						<ul>
+							<li class="mb-3">
+								<i class="fas fa-map-marker"></i> 123 Sebastian, USA.</li>
+							<li class="mb-3">
+								<i class="fas fa-mobile"></i> 333 222 3333 </li>
+							<li class="mb-3">
+								<i class="fas fa-phone"></i> +222 11 4444 </li>
+							<li class="mb-3">
+								<i class="fas fa-envelope-open"></i>
+								<a href="mailto:example@mail.com"> mail 1@example.com</a>
+							</li>
+							<li>
+								<i class="fas fa-envelope-open"></i>
+								<a href="mailto:example@mail.com"> mail 2@example.com</a>
+							</li>
+						</ul>
+					</div>
+					<div class="col-md-3 col-sm-6 footer-grids w3l-agileits mt-md-0 mt-4">
+						<h3 class="text-white font-weight-bold mb-3">Newsletter</h3>
+						<p class="mb-3">Free Delivery on your first order!</p>
+						<form action="#" method="post">
+							<div class="form-group">
+								<input type="email" class="form-control" placeholder="Email" name="email" required="">
+								<input type="submit" value="Go">
+							</div>
+						</form>
+						<div class="footer-grids  w3l-socialmk mt-3">
+							<h3 class="text-white font-weight-bold mb-3">Follow Us on</h3>
+							<div class="social">
+								<ul>
+									<li>
+										<a class="icon fb" href="#">
+											<i class="fab fa-facebook-f"></i>
+										</a>
+									</li>
+									<li>
+										<a class="icon tw" href="#">
+											<i class="fab fa-twitter"></i>
+										</a>
+									</li>
+									<li>
+										<a class="icon gp" href="#">
+											<i class="fab fa-google-plus-g"></i>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+</footer>
